src/components/Shop/ProductDetails/ProductDetails.css
.input-design {
    text-align: center;
    border-radius: 10px;
    font-size: 1.125rem;
    font-family: 'Roboto', sans-serif;
    max-width: 4.375rem;
}

.product-description-typography h4 {
    font-size: 3.5rem;
    color: #642F21;
    text-transform: uppercase;
}

.product-description-typography h5 {
    font-size: 2.375rem;
    color: #FFC107;
}

.product-description-typography p {
    font-family: 'Roboto', sans-serif;
    color: #6C757D;
    font-size: 1.125rem;
    font-weight: 300;
}

.product-description-icons {
    font-size: 1.5625rem;
    margin: 0.625rem;
}

#related-products {
    margin-top: 5rem;
    margin-bottom: 4.375rem;
    background-color: #F6F9FA;
}

